@@ -115,7 +115,8 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-208 (28 nov 2010 - ???) SLOC ??? UT ??? FT ??:??
-- (6) CamelCased some files in common/
+- (7) Fixed a Label function typo
+- CamelCased some files in common/
    AttributeModifierList, BoostImport.hpp
 - Implamented Label::Draw()
 - Implemented Label's wordwrap getter and setter
