@@ -199,7 +199,7 @@ void RainbruRPG::Core::gsMainMenu::setupTabOrder(){
 void RainbruRPG::Core::gsMainMenu::setupMainMenu(){
 
   OgreGui::Window* w = new OgreGui::Window(mContainer, "aze", 10, 20, 100, 100);
-  Label* l = new Label(w , 15, 25, 55, 95, "This is a label");
+  Label* l = new Label(w , 15, 25, 55, 95, "A");
   w->push_back(l);
   mContainer->push_back(w);
 
